--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,45 +25,59 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.11.12, 2.12.18, 2.13.12, 3.3.1]
-        java: [temurin@11, temurin@17]
+        java: [temurin@11, temurin@17, temurin@21]
+        platform: ["jvm"]
     runs-on: ${{ matrix.os }}
+    env:
+      VERSION_SPEC: ${{matrix.scala}}-${{matrix.platform}}
     steps:
-      - name: Checkout current branch (full)
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Setup Java (temurin@11)
-        if: matrix.java == 'temurin@11'
-        uses: actions/setup-java@v3
+      - name: Setup Java and Scala
+        uses: olafurpg/setup-scala@v14
         with:
-          distribution: temurin
-          java-version: 11
-          cache: sbt
+          java-version: ${{ matrix.java }}
 
-      - name: Setup Java (temurin@17)
-        if: matrix.java == 'temurin@17'
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 17
-          cache: sbt
+#      - name: Setup Java 11
+#        if: matrix.java == 'temurin@11'
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: temurin
+#          java-version: 11
+#          cache: sbt
+#
+#      - name: Setup Java 17
+#        if: matrix.java == 'temurin@17'
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: temurin
+#          java-version: 17
+#          cache: sbt
+#
+#      - name: Setup Java 21
+#        if: matrix.java == 'temurin@21'
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: temurin
+#          java-version: 21
+#          cache: sbt
 
-      - name: Check that workflows are up to date
-        run: sbt '++ ${{ matrix.scala }}' githubWorkflowCheck
+      - name: Compile and Run Tests
+        if: matrix.scala != '2.13.12'
+        run: sbt test-$VERSION_SPEC
 
-      - name: Build project
-        run: sbt '++ ${{ matrix.scala }}' test
-
-      - name: Generate Code Coverage Reports
+      - name: Compile, Run Tests and Generate Code Coverage Reports (2.13 only)
         if: matrix.scala == '2.13.12'
-        run: sbt '++ ${{ matrix.scala }}' clean coverage test
+        run: sbt clean-$VERSION_SPEC coverage-$VERSION_SPEC test-$VERSION_SPEC
 
-      - name: Aggregate Code Coverage Report
+      - name: Aggregate Code Coverage Report (2.13 only)
         if: matrix.scala == '2.13.12'
-        run: sbt '++ ${{ matrix.scala }}' coverageAggregate
+        run: sbt coverageAggregate-$VERSION_SPEC
 
-      - name: Upload Code Coverage Report
+      - name: Upload Code Coverage Report (2.13 only)
         if: matrix.scala == '2.13.12'
         uses: codecov/codecov-action@v3
         with:
