--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.11.12, 2.12.18, 2.13.12, 3.3.1]
-        java: [temurin@11, temurin@17, temurin@21]
+        java: [11, 17, 21]
         platform: ["jvm"]
     runs-on: ${{ matrix.os }}
     env:
@@ -36,34 +36,17 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Java and Scala
-        uses: olafurpg/setup-scala@v14
-        with:
-          java-version: ${{ matrix.java }}
+#      - name: Setup Java and Scala
+#        uses: olafurpg/setup-scala@v14
+#        with:
+#          java-version: ${{ matrix.java }}
 
-#      - name: Setup Java 11
-#        if: matrix.java == 'temurin@11'
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: temurin
-#          java-version: 11
-#          cache: sbt
-#
-#      - name: Setup Java 17
-#        if: matrix.java == 'temurin@17'
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: temurin
-#          java-version: 17
-#          cache: sbt
-#
-#      - name: Setup Java 21
-#        if: matrix.java == 'temurin@21'
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: temurin
-#          java-version: 21
-#          cache: sbt
+      - name: Setup Java ${{matrix.java}}
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: ${{matrix.java}}
+          cache: sbt
 
       - name: Compile and Run Tests
         if: matrix.scala != '2.13.12'
