--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [2.11.12, 2.12.18, 2.13.12, 3.3.1]
+        scala: ["2.11.12", "2.12.18", "2.13.12", "3.3.1"]
         java: [11, 17, 21]
         platform: ["jvm"]
     runs-on: ${{ matrix.os }}
