--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: ["2_11", "2_12", "2_13", "3"]
+        scala: ["2_11", "2_12", "2_13", "3_3_1"]
         java: [11, 17, 21]
         platform: ["jvm"]
     runs-on: ${{ matrix.os }}
