--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,19 +42,19 @@ jobs:
           cache: sbt
 
       - name: Compile and Run Tests
-        if: matrix.scala != '2_13'
+        if: ! (matrix.scala == '2_13' && matrix.java == 21)
         run: sbt test-$VERSION_SPEC
 
       - name: Compile, Run Tests and Generate Code Coverage Reports (2.13 only)
-        if: matrix.scala == '2_13'
+        if: matrix.scala == '2_13' && matrix.java == 21
         run: sbt clean-$VERSION_SPEC coverage test-$VERSION_SPEC
 
       - name: Aggregate Code Coverage Report (2.13 only)
-        if: matrix.scala == '2_13'
+        if: matrix.scala == '2_13' && matrix.java == 21
         run: sbt coverageAggregate
 
       - name: Upload Code Coverage Report (2.13 only)
-        if: matrix.scala == '2_13'
+        if: matrix.scala == '2_13' && matrix.java == 21
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
